--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "request": "^2.65.0",
     "split": "^1.0.0",
     "stream-array": "^1.1.1",
+    "through2": "^2.0.0",
     "tile-cover": "^3.0.1",
     "tilebelt": "^1.0.1",
     "turf-bbox-polygon": "^1.0.1",
